<resources>
    <string name="app_name">MyApp4</string>
    <string name="login_username_text">账号</string>
    <string name="login_hint_username">请输入账号</string>
    <string name="login_password_text">密码</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="register_text">注册</string>
    <string name="sex_text">性别</string>
    <string name="select_sex_text">请选择性别</string>
    <string name="birthday">生日</string>
    <string name="effective_now">即时</string>
</resources>